feat: adiciona testes unitários para casos de uso do usuário

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -20,6 +20,7 @@
     "strictPropertyInitialization": false,
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["vitest/globals"]
   }
 }
