--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -42,6 +43,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
