--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-vercel": "^9.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -54,6 +55,6 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.3"
   }
 }
